--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.1"
     defaultConfig {
-        applicationId "com.virgiltest.cardoso.e3kitandroiddemo"
+        applicationId "com.virgilsecurity.demo.e3kitandroid"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
